src/main/java/com/example/demo/error/ExternalAuthException.java
package com.example.demo.error;

public class ExternalAuthException extends RuntimeException {
  public ExternalAuthException(String message) {
    super(message);
  }
}
